--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
           # Local directory
           localDir: ./
           # Remote directory
-          remoteDir: ./
+          remoteDir: ./htdocs
