--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
           # Force SSL encryption
           forceSsl:  false
           # Local directory
-          localDir: ./
+          localDir: ../
           # Remote directory
           remoteDir: ./htdocs
