--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      -clone
+        run: git clone https://github.com/SafelyDownload/website-source.git
       - name: ftp-action
         # You may pin to the exact commit or the version.
         # uses: sebastianpopp/ftp-action@eb75c5cb29d23ee4a729720a27dfb66403cb0f6d
@@ -36,6 +38,6 @@ jobs:
           # Force SSL encryption
           forceSsl:  false
           # Local directory
-          localDir: ../
+          localDir: ./website-source/
           # Remote directory
           remoteDir: ./htdocs
