--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      -clone
+      - name: clone
         run: git clone https://github.com/SafelyDownload/website-source.git
       - name: ftp-action
         # You may pin to the exact commit or the version.
