--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: clone
-        run: git clone git@github.com:SafelyDownload/website-source.git
+        run: cd .
       - name: ftp-action
         # You may pin to the exact commit or the version.
         # uses: sebastianpopp/ftp-action@eb75c5cb29d23ee4a729720a27dfb66403cb0f6d
